images and content writing

--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
               <div class="col-md-5 no-padding">                
                 <div class="aa-promo-left">
                   <div class="aa-promo-banner">                    
-                    <img src="img/promo-banner-1.jpg" alt="img">                    
+                    <img src="img/donatepromo.jpg" alt="img">                    
                     <div class="aa-prom-content">
-                      <h4><a href="#">Stationaries</a></h4>                      
+                      <h4><a href="#">Donate</a></h4>                      
                     </div>
                   </div>
                 </div>
@@ -177,7 +177,15 @@
                 <div class="aa-promo-right">
                   <div class="aa-single-promo-right">
                     <div class="aa-promo-banner">                      
-                      <img src="img/promo-banner-3.jpg" alt="img">                      
+                      <img src="img/stationeriespromo.jpg" alt="img">                      
+                      <div class="aa-prom-content">
+                        <h4><a href="#">Stationaries</a></h4>                        
+                      </div>
+                    </div>
+                  </div>
+                  <div class="aa-single-promo-right">
+                    <div class="aa-promo-banner">                      
+                      <img src="img/electronicspromo.jpg" alt="img">                      
                       <div class="aa-prom-content">
                         <h4><a href="#">Electronics</a></h4>                        
                       </div>
@@ -185,17 +193,9 @@
                   </div>
                   <div class="aa-single-promo-right">
                     <div class="aa-promo-banner">                      
-                      <img src="img/promo-banner-2.jpg" alt="img">                      
+                      <img src="img/roomspromo.jpg" alt="img">                      
                       <div class="aa-prom-content">
-                        <h4><a href="#">Hostel Rooms</a></h4>                        
-                      </div>
-                    </div>
-                  </div>
-                  <div class="aa-single-promo-right">
-                    <div class="aa-promo-banner">                      
-                      <img src="img/promo-banner-4.jpg" alt="img">                      
-                      <div class="aa-prom-content">
-                        <h4><a href="#">PG Rooms</a></h4>                        
+                        <h4><a href="#">Rooms</a></h4>                        
                       </div>
                     </div>
                   </div>
@@ -242,7 +242,7 @@
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                               <figcaption>
                               <h4 class="aa-product-title"><a href="#">B.S. Grewal</a></h4>
-                              <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                              <span class="aa-product-price">Rs. 450</span>
                             </figcaption>
                           </figure>                        
                         </li>
@@ -252,7 +252,7 @@
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                              <figcaption>
                               <h4 class="aa-product-title"><a href="#">OOPS </a></h4>
-                              <span class="aa-product-price">$45.50</span>
+                              <span class="aa-product-price">Rs. 150</span>
                             </figcaption>
                           </figure>                         
                         </li>
@@ -262,7 +262,7 @@
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                              <figcaption>
                               <h4 class="aa-product-title"><a href="#">Digital Design</a></h4>
-                              <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                              <span class="aa-product-price">Rs. 150</span>
                             </figcaption>
                           </figure>                         
                         </li>
@@ -272,7 +272,7 @@
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                             <figcaption>
                               <h4 class="aa-product-title"><a href="#">Polymers Notes</a></h4>
-                              <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                              <span class="aa-product-price">Rs. 13</span>
                             </figcaption>
                           </figure>  
                         </li>                            
@@ -285,41 +285,41 @@
                       <ul class="row  aa-product-catg">
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/electronics/boat.jpg" alt="polo shirt img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/electronics/boat.jpg" alt="headphones img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                             <figcaption>
-                              <h4 class="aa-product-title"><a href="#">This is Title</a></h4>
-                              <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                              <h4 class="aa-product-title"><a href="#">Boat Rockerz Headphones</a></h4>
+                              <span class="aa-product-price">Rs. 250</span>
                             </figcaption>
                           </figure>                         
                         </li>
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/women/girl-2.png" alt="polo shirt img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/electronics/asusmobile.jpg" alt="asus img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                             <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                              <span class="aa-product-price">$45.50</span>
+                              <h4 class="aa-product-title"><a href="#">Asus Zenfone Max Pro</a></h4>
+                              <span class="aa-product-price">Rs. 5000</span>
                             </figcaption>
                           </figure>                         
                         </li>
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/women/girl-3.png" alt="polo shirt img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/electronics/lenovolaptop.jpg" alt="laptop img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                             <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                              <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                              <h4 class="aa-product-title"><a href="#">Lenovo IdeaPad</a></h4>
+                              <span class="aa-product-price">Rs. 20,000</span>
                             </figcaption>
                           </figure>                         
                         </li>
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/women/girl-4.png" alt="polo shirt img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/electronics/motomobile.jpg" alt="polo shirt img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                             <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                              <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                              <h4 class="aa-product-title"><a href="#">Moto G</a></h4>
+                              <span class="aa-product-price">Rs. 3000</span>
                             </figcaption>
                           </figure>                          
                         </li>                      
@@ -332,21 +332,21 @@
                       <ul class="row aa-product-catg">
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/rooms/shivalik.jpg" alt="polo shirt img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/rooms/shivalik.jpg" alt="shivalik img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                             <figcaption>
-                              <h4 class="aa-product-title"><a href="#">This is Title</a></h4>
-                              <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                              <h4 class="aa-product-title"><a href="#">Shivalik PG</a></h4>
+                              <span class="aa-product-price">Rs. 4900/month</span>
                             </figcaption>
                           </figure>                         
                         </li>
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
-                            <a class="aa-product-img" href="#"><img src="img/rooms/saharapg.jpg" alt="polo shirt img"></a>
+                            <a class="aa-product-img" href="#"><img src="img/rooms/saharapg.jpg" alt="sahara img"></a>
                             <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                             <figcaption>
-                              <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                              <span class="aa-product-price">$45.50</span>
+                              <h4 class="aa-product-title"><a href="#">Sahara PG</a></h4>
+                              <span class="aa-product-price">Rs. 5500/month</span>
                             </figcaption>
                           </figure>                         
                         </li>
