--- a/products/digitaldesign.html
+++ b/products/digitaldesign.html
@@ -147,7 +147,7 @@
                       <span class="aa-product-view-price">Rs 150</span>
                       <ul>
                         <li class="aa-product-avilability">Availability: <span>In stock</span></li>
-                        <li class="aa-product-avilability">Owner's Name: <span>Nikhil Rathore</span></li>
+                        <li class="aa-product-avilability">Owner's Name: <span>Nikhil Rathoure</span></li>
                         <li class="aa-product-avilability">Branch: <span>CSE(2ND SEM)</span></li>
                         <li class="aa-product-avilability">Contact: <span>9709892199</span></li>
 
