images and content writing

--- a/electronics.html
+++ b/electronics.html
@@ -115,74 +115,52 @@
             <div class="aa-product-catg-content">
               <div class="aa-product-catg-head">
                 <div class="aa-product-catg-head-right">
-                  <a id="grid-catg" href="#"><span class="fa fa-th"></span></a>
                   <a id="list-catg" href="#"><span class="fa fa-list"></span></a>
+                  <a id="grid-catg" href="#"><span class="fa fa-th"></span></a>
                 </div>
               </div>
               <div class="aa-product-catg-body">
                 <ul class="aa-product-catg">
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-1.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/asusmobile.jpg" alt="asus img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">This is Title</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <h4 class="aa-product-title"><a href="#">Asus Zenfone Max Pro</a></h4>
+                        <span class="aa-product-price">Rs. 5000</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-2.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/boat.jpg" alt="headphones img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span>
+                        <h4 class="aa-product-title"><a href="#">Boat Rockerz 400 Headphones</a></h4>
+                        <span class="aa-product-price">Rs. 250</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-3.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/lenovolaptop.jpg" alt="laptop img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <h4 class="aa-product-title"><a href="#">Lenovo IdeaPad</a></h4>
+                        <span class="aa-product-price">Rs. 20,000</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-4.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/electronics/motomobile.jpg" alt="mobile img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                          
-                  </li>
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-5.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span>
-                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
-                      </figcaption>
-                    </figure>                 
-                  </li>
-                  <li>
-                    <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-6.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
-                      <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <h4 class="aa-product-title"><a href="#">Moto G</a></h4>
+                        <span class="aa-product-price">Rs. 3000</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                          
