--- a/products/polymernotes.html
+++ b/products/polymernotes.html
@@ -155,7 +155,7 @@
                     <p>Polymer comes under organic chemistry in Engineering Chemistry.</p>
                     <div class="aa-prod-quantity">
                       <p class="aa-prod-category">
-                        Category: <a href="#">Category Name</a>
+                        Category: <a href="#">Stationeries</a>
                       </p>
                     </div>
                     <div class="aa-prod-view-bottom">
