--- a/stationaries.html
+++ b/stationaries.html
@@ -97,7 +97,7 @@
    
     <!-- catg header banner section -->
     <section id="aa-catg-head-banner">
-      <img src="img/stationaries/stationariesbanner.jpeg" alt="fashion img">
+      <img src="img/stationaries/stationariesbanner.jpeg" alt="banner img">
       <div class="aa-catg-head-banner-area">
         <div class="container">
           <div class="aa-catg-head-banner-content">
@@ -123,66 +123,88 @@
                 <ul class="aa-product-catg">
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-1.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/stationaries/bsgrewal.jpg" alt="bsgrewal img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">This is Title</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <h4 class="aa-product-title"><a href="#">Engineering Mathematics by B.S. Grewal</a></h4>
+                        <span class="aa-product-price">Rs. 450</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-2.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/stationaries/c++.jpg" alt="c++ img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span>
+                        <h4 class="aa-product-title"><a href="#">OOPS by E. Balaguruswamy</a></h4>
+                        <span class="aa-product-price">Rs. 150</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-3.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/stationaries/catalysisnotes.jpg" alt="notes img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <h4 class="aa-product-title"><a href="#">Catalysis Notes</a></h4>
+                        <span class="aa-product-price">Rs. 15</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-4.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/stationaries/chempracticalmanual.jpg" alt="manual img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <h4 class="aa-product-title">Chemistry Practical Manual<a href="#">C</a></h4>
+                        <span class="aa-product-price">Rs. 25</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                          
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-5.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/stationaries/digitaldesign.jpg" alt="digitaldesign img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span>
+                        <h4 class="aa-product-title"><a href="#">Digital Design</a></h4>
+                        <span class="aa-product-price">Rs. 150</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                 
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/women/girl-6.png" alt="polo shirt img"></a>
-                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Add To Cart</a>
+                      <a class="aa-product-img" href="#"><img src="img/stationaries/icse.jpg" alt="icse img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
+                        <h4 class="aa-product-title"><a href="#">Computer Fundamentals</a></h4>
+                        <span class="aa-product-price">Rs. 150</span>
+                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/stationaries/polymersnotes.jpg" alt="notes img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">Polymers Notes</a></h4>
+                        <span class="aa-product-price">Rs. 13</span>
+                        <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="#"><img src="img/stationaries/uvnotes.jpg" alt="notes img"></a>
+                      <a class="aa-add-card-btn"href="#"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="#">UV-VIS Notes</a></h4>
+                        <span class="aa-product-price">Rs. 13</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                          
