--- a/others.html
+++ b/others.html
@@ -120,7 +120,7 @@
                 </div>
               </div>
               <div class="aa-product-catg-body">
-                <ul class="aa-product-catg">
+                <ul class="list aa-product-catg">
                   <li>
                     <figure>
                       <a class="aa-product-img" href="#"><img src="img/women/girl-1.png" alt="polo shirt img"></a>
